feat: popup_type_contacts fixes

--- a/src/index.html
+++ b/src/index.html
@@ -599,7 +599,7 @@
     </div>
 
     <div class="popup popup_type_contacts">
-      <div class="popup__inner">
+      <div class="popup__inner popup__inner-contacts">
         <button class="popup__close-btn" type="button"></button>
         <form class="vacancy-form" name="popup__form" id="popup__form_edit">
           <h2 class="vacancy-form__title">Не нашли себя в открытых предложениях?
