feat: mobile-size

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
 
             <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/management/"
               alt="Каталог курсов яндекс практикума">
-              <div class="teaching__course-box teaching__course-box_yellow">IT</div>
+              <div class="teaching__course-box teaching__course-box_yellow">SCRUM</div>
               <div class="teaching__course teaching__course_it">
                 <h5 class="teaching__course-title">Менеджмент</h5>
                 <p class="teaching__course-subtitle">Управление проектами, командами и IT-рекрутмент</p>
@@ -156,22 +156,24 @@
               </div>
               <div class="teaching__course-box teaching__course-box_left">Трафик</div>
             </a>
-            <a class="teaching__link teaching__link_alone" target="_blank"
-              href="https://practicum.yandex.ru/catalog/eng/" alt="Каталог курсов яндекс практикума">
-              <div class="teaching__course teaching__course_eng">
-                <h5 class="teaching__course-title">Английский</h5>
-                <p class="teaching__course-subtitle teaching__course-subtitle_s">Для работы и жизни</p>
-                <p class="teaching__course-amount">4 курса</p>
-              </div>
-            </a>
-            <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/"
-              alt="Каталог курсов яндекс практикума">
-              <div class="teaching__course teaching__course_all">
-                <h5 class="teaching__course-title teaching__course-title_light">Все курсы</h5>
-                <p class="teaching__course-subtitle teaching__course-subtitle_s"></p>
-                <p class="teaching__course-amount teaching__course-amount_light">76 курсов</p>
-              </div>
-            </a>
+            <div class="teaching__links-box">
+              <a class="teaching__link teaching__link_alone" target="_blank"
+                href="https://practicum.yandex.ru/catalog/eng/" alt="Каталог курсов яндекс практикума">
+                <div class="teaching__course teaching__course_eng">
+                  <h5 class="teaching__course-title">Английский</h5>
+                  <p class="teaching__course-subtitle teaching__course-subtitle_s">Для работы и жизни</p>
+                  <p class="teaching__course-amount">4 курса</p>
+                </div>
+              </a>
+              <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/"
+                alt="Каталог курсов яндекс практикума">
+                <div class="teaching__course teaching__course_all">
+                  <h5 class="teaching__course-title teaching__course-title_light">Все курсы</h5>
+                  <p class="teaching__course-subtitle teaching__course-subtitle_s"></p>
+                  <p class="teaching__course-amount teaching__course-amount_light">76 курсов</p>
+                </div>
+              </a>
+          </div>
           </div>
         </section>
 
