section1 mobile готова

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <div class="layout">
-      <header class="header">
+      <!-- <header class="header">
         <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
         <ul class="header__questions">
           <li class="header__question-text">
@@ -26,7 +26,7 @@
           </li>
         </ul>
         <button class="header__button">Кого мы ищем</button>
-      </header>
+      </header> -->
 
       <main class="content">
         <section class="section1 main-width-block">
@@ -44,12 +44,15 @@
                 Почему Яндекс Практикум?
               </button>
             </div>
+            <div>
             <img class="section1__img" src="<%=require('./images/title-photo.jpg')%>" alt="девушка в голубой рубашке" />
           </div>
+        </div>
+
           <div class="quizz">
             <div class="quizz__info">
               <h3 class="quizz__title">Кто ты?</h3>
-              <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
+            <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
             </div>
             <button class="quizz__btn btn" type="button">Выбери своего игрока!</button>
           </div>
@@ -103,7 +106,7 @@
             </div>
         </section>
 
-        <section class="teaching main-width-block" id="teaching">
+        <!-- <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
           <div class="teaching__box">
             <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/programming/"
@@ -482,6 +485,7 @@
           </p>
         </div>
       </footer>
+      -->
     </div>
     <div class="popup popup_type_quizz">
       <div class="popup__inner">
