mobile header готов

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <div class="page">
     <div class="layout">
       <header class="header">
+        <div class="header__wrapper">
         <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
         <ul class="header__questions">
           <li class="header__question-text">
@@ -25,6 +26,7 @@
             <a class="header__question" href="#questions">Частые вопросы</a>
           </li>
         </ul>
+        </div>
         <button class="header__button">Кого мы ищем</button>
       </header>
       <main class="content">
