последние правки дизайнера в первые 3 mobile блоки

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                   </p>
                 </li>
               </ul>
-              <button class="what-give__btn">К открытым позициям</button>
+              <button class="what-give__btn">Посмотреть вакансии</button>
             </div>
         </section>
 
