footer mobile - готов

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
         </div>
-        <button class="header__button">Кого мы ищем</button>
+        <a href="#vacancy" class=" header__question header__button">Кого мы ищем</a>
       </header>
       <main class="content">
         <section class="section1 main-width-block">
@@ -454,18 +454,18 @@
             <p class="footer__contacts-phone">8 800 800-93-29</p>
             <p class="footer__contacts-phone-caption">Звонок по России бесплатный</p>
             <div class="footer__contacts-social">
-              <a href="#" class="footer__social-icon footer__social-icon_type_vk"></a>
+              <a href="https://vk.com/yandex.practicum" class="footer__social-icon footer__social-icon_type_vk"></a>
               <a href="#" class="footer__social-icon footer__social-icon_type_tg"></a>
-              <a href="#" class="footer__social-link">Журнал</a>
+              <a href="https://thecode.media/" class="footer__social-link">Журнал</a>
             </div>
           </div>
           <nav class="footer__nav-links">
-            <a href="#" class="footer__nav-link">Помощь</a>
-            <a href="#" class="footer__nav-link">Правовая информация</a>
-            <a href="#" class="footer__nav-link">Вакансии</a>
-            <a href="#" class="footer__nav-link">Для разработчиков</a>
-            <a href="#" class="footer__nav-link">Лицензии</a>
-            <a href="#" class="footer__nav-link">Отзывы</a>
+            <a href="https://yandex.ru/support/praktikum/feedback.html" class="footer__nav-link">Помощь</a>
+            <a href="https://yandex.ru/legal/praktikum_termsofuse/" class="footer__nav-link">Правовая информация</a>
+            <a href="http://praktikum.yandex.ru/job" class="footer__nav-link">Вакансии</a>
+            <a href="https://praktikum.yandex.ru/employment" class="footer__nav-link">Для разработчиков</a>
+            <a href="https://code.s3.yandex.net/License%20YSDA.pdf" class="footer__nav-link">Лицензии</a>
+            <a href="https://praktikum.yandex.ru/reviews/" class="footer__nav-link">Отзывы</a>
           </nav>
         </div>
         <div class="footer__law-info">
