--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,21 +12,22 @@
     <div class="layout">
       <header class="header">
         <div class="header__wrapper">
-        <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
-        <ul class="header__questions">
-          <li class="header__question-text">
-            <a class="header__question" href="#benefits">Преимущества сотрудничества</a>
-          </li>
-          <li class="header__question-text">
-            <a class="header__question" href="#teaching">Направления обучения</a>
-          </li>
-          <li class="header__question-text">
-            <a class="header__question" href="#slides">Отзывы</a>
-          </li>
-          <li class="header__question-text">
-            <a class="header__question" href="#questions">Частые вопросы</a>
-          </li>
-        </ul>
+          <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/"
+            alt="Главная яндекс практикума"></a>
+          <ul class="header__questions">
+            <li class="header__question-text">
+              <a class="header__question" href="#benefits">Преимущества сотрудничества</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#teaching">Направления обучения</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#slides">Отзывы</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#questions">Частые вопросы</a>
+            </li>
+          </ul>
         </div>
         <a href="#vacancy" class=" header__question header__button">Кого мы ищем</a>
       </header>
@@ -46,65 +48,66 @@
               </button>
             </div>
             <div>
-            <img class="section1__img" src="<%=require('./images/title-photo.jpg')%>" alt="девушка в голубой рубашке" />
+              <img class="section1__img" src="<%=require('./images/title-photo.jpg')%>"
+                alt="девушка в голубой рубашке" />
+            </div>
           </div>
-        </div>
 
           <div class="quizz">
             <div class="quizz__info">
               <h3 class="quizz__title">Кто ты?</h3>
-            <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
+              <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
             </div>
             <button class="quizz__btn btn" type="button">Выбери своего игрока!</button>
           </div>
         </section>
 
         <section class="what-give main-width-block" id="benefits">
-            <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
-            <div class="what-give__container">
-              <ul class="what-give__cards-list">
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Дополнительный доход</h4>
-                  <p class="what-give__card-text">
-                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
-                    занятости 2–3 часа в день
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Общение с людьми из EdTech
-                  </h4>
-                  <p class="what-give__card-text">
-                    Ты станешь частью сообщества экспертов и посмотришь
-                    на мир онлайн-образования изнутри
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Саморазвитие</h4>
-                  <p class="what-give__card-text">
-                    Публикуй статьи в нашем блоге и выступай на мероприятиях,
-                    чтобы как можно больше людей узнали о тебе как об эксперте,
-                    прокачивай свои soft skills
-                  </p>
-                </li>
-                  <li class="what-give__card what-give__animation">
-                    <h4 class="what-give__card-title">Развитие внутри роли</h4>
-                    <p class="what-give__card-text">
-                    Ты сможешь стать старшим наставником или сеньор-ревьювером
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Возможность менять жизни людей к лучшему
-                  </h4>
-                  <p class="what-give__card-text">
-                    Тысячи наших студентов нуждаются в твоих знаниях и опыте —
-                    не бойся ими делиться
-                  </p>
-                </li>
-              </ul>
-              <button class="what-give__btn">Посмотреть вакансии</button>
-            </div>
+          <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
+          <div class="what-give__container">
+            <ul class="what-give__cards-list">
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Дополнительный доход</h4>
+                <p class="what-give__card-text">
+                  Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
+                  занятости 2–3 часа в день
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">
+                  Общение с людьми из EdTech
+                </h4>
+                <p class="what-give__card-text">
+                  Ты станешь частью сообщества экспертов и посмотришь
+                  на мир онлайн-образования изнутри
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Саморазвитие</h4>
+                <p class="what-give__card-text">
+                  Публикуй статьи в нашем блоге и выступай на мероприятиях,
+                  чтобы как можно больше людей узнали о тебе как об эксперте,
+                  прокачивай свои soft skills
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Развитие внутри роли</h4>
+                <p class="what-give__card-text">
+                  Ты сможешь стать старшим наставником или сеньор-ревьювером
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">
+                  Возможность менять жизни людей к лучшему
+                </h4>
+                <p class="what-give__card-text">
+                  Тысячи наших студентов нуждаются в твоих знаниях и опыте —
+                  не бойся ими делиться
+                </p>
+              </li>
+            </ul>
+            <button class="what-give__btn">Посмотреть вакансии</button>
+          </div>
         </section>
 
         <section class="teaching main-width-block" id="teaching">
@@ -176,7 +179,7 @@
                   <p class="teaching__course-amount teaching__course-amount_light">76 курсов</p>
                 </div>
               </a>
-          </div>
+            </div>
           </div>
         </section>
 
@@ -336,13 +339,21 @@
             <span class="expectations__steps-arrow-caption">Ты находишься здесь</span>
           </article>
         </section>
+
         <section class="vacancy main-width-block" id="vacancy">
           <h2 class="section-title vacancy__title">Наши открытые предложения</h2>
           <form class="vacancy__filter" name="vacancies">
-            <select name="type" class="vacancy__filter-job">
-              <option selected value="mentor">Для наставников</option>
-              <option value="reviewer">Для ревьюеров</option>
-            </select>
+            <div class="vacancy__filter-select-container">
+              <button type="button" class="vacancy__filter-select-button">
+                Для наставников
+              </button>
+              <fieldset class="vacancy__filter-job">
+                <input checked name="type" value="mentor" id="type1" class="vacancy__filter-radio" type="radio">
+                <label for="type1" class="vacancy__filter-option">Для наставников</label>
+                <input name="type" value="reviewer" id="type2" class="vacancy__filter-radio" type="radio">
+                <label for="type2" class="vacancy__filter-option">Для ревьюеров</label>
+              </fieldset>
+            </div>
             <fieldset class="vacancy__filter-items">
               <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
               <label for="vacancy1" class="vacancy__filter-item">Программирование</label>
@@ -391,7 +402,8 @@
                 У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
               </label>
               <div class="questions__accordeon-content">
-                <p class="questions__content-paragraph">Да. У нас есть Школа экспертов Яндекс Практикума, где вы с нуля освоите все тонкости преподавания.</p>
+                <p class="questions__content-paragraph">Да. У нас есть Школа экспертов Яндекс Практикума, где вы с нуля
+                  освоите все тонкости преподавания.</p>
               </div>
             </li>
             <li class="questions__accordeon-item">
@@ -400,7 +412,8 @@
                 Какой график и формат работы?
               </label>
               <div class="questions__accordeon-content">
-                <p class="questions__content-paragraph">Это полностью удалённая работа с гибким графиком. Вам потребуется примерно два-три часа в день, при этом вы сами формируете комфортное расписание.</p>
+                <p class="questions__content-paragraph">Это полностью удалённая работа с гибким графиком. Вам
+                  потребуется примерно два-три часа в день, при этом вы сами формируете комфортное расписание.</p>
               </div>
             </li>
             <li class="questions__accordeon-item">
@@ -410,11 +423,14 @@
               </label>
               <div class="questions__accordeon-content">
                 <p class="questions__content-paragraph">C организацией работы вам поможет команда Яндекс Практикума:</p>
-                <p class="questions__content-paragraph">- Менеджер онбординга решит вопросы с оформлением и адаптацией.</p>
-                <p class="questions__content-paragraph">- Методист предоставит доступ к материалам для подготовки. Вместе с автором методист проектирует
-                образовательные программы: методички по каждому занятию, презентации, инструкции и прочее.</p>
-                <p class="questions__content-paragraph">- Кураторы помогут в общении со студентами: создадут чат в Telegram или подскажут, как решить конфликт в
-                группе.</p>
+                <p class="questions__content-paragraph">- Менеджер онбординга решит вопросы с оформлением и адаптацией.
+                </p>
+                <p class="questions__content-paragraph">- Методист предоставит доступ к материалам для подготовки.
+                  Вместе с автором методист проектирует
+                  образовательные программы: методички по каждому занятию, презентации, инструкции и прочее.</p>
+                <p class="questions__content-paragraph">- Кураторы помогут в общении со студентами: создадут чат в
+                  Telegram или подскажут, как решить конфликт в
+                  группе.</p>
               </div>
             </li>
             <li class="questions__accordeon-item">
@@ -423,7 +439,8 @@
                 Смогу ли я работать на нескольких направлениях, если обладаю экспертизой в каждом из них?
               </label>
               <div class="questions__accordeon-content">
-                <p class="questions__content-paragraph">Да, мы обязательно рассмотрим ваш отклик и передадим коллегам для дальнейшего ознакомления.</p>
+                <p class="questions__content-paragraph">Да, мы обязательно рассмотрим ваш отклик и передадим коллегам
+                  для дальнейшего ознакомления.</p>
               </div>
             </li>
             <li class="questions__accordeon-item">
@@ -432,7 +449,8 @@
                 Я не гражданин России, смогу ли я сотрудничать?
               </label>
               <div class="questions__accordeon-content">
-                <p class="questions__content-paragraph">Разумеется. Мы заключим с вами договор ГПХ или оплатим оказанные услуги через Solar Staff.</p>
+                <p class="questions__content-paragraph">Разумеется. Мы заключим с вами договор ГПХ или оплатим оказанные
+                  услуги через Solar Staff.</p>
               </div>
             </li>
           </ul>
@@ -654,18 +672,19 @@
               <div class="vacancy-form__input-box">
                 <select required class="vacancy-form__select">
                   <option selected disabled></option>
-                  <option value="программирование" >программирование</option>
-                  <option value="дизайн" >дизайн</option>
-                  <option value="макетиг" >макетиг</option>
-                  <option value="англ. яз" >англ. яз</option>
-                  <option value="менеджмент" >менеджмент</option>
+                  <option value="программирование">программирование</option>
+                  <option value="дизайн">дизайн</option>
+                  <option value="макетиг">макетиг</option>
+                  <option value="англ. яз">англ. яз</option>
+                  <option value="менеджмент">менеджмент</option>
                 </select>
                 <span class="vacancy-form__span">error</span>
               </div>
             </div>
 
             <div class="vacancy-form__box vacancy-form__box_ta">
-              <p class="vacancy-form__input-title vacancy-form__input-title_ta">Перечислите набор технологий, которыми вы владеете и уровень владения каждой</p>
+              <p class="vacancy-form__input-title vacancy-form__input-title_ta">Перечислите набор технологий, которыми
+                вы владеете и уровень владения каждой</p>
               <textarea class="vacancy-form__textarea" required></textarea>
               <span class="vacancy-form__span">error</span>
 
@@ -673,7 +692,8 @@
 
 
             <div class="vacancy-form__box">
-              <p class="vacancy-form__input-title">Ссылка на резюме (пожалуйста, проверте, что вы открыли доступ к докумену )</p>
+              <p class="vacancy-form__input-title">Ссылка на резюме (пожалуйста, проверте, что вы открыли доступ к
+                докумену )</p>
               <div class="vacancy-form__input-box">
                 <input type="text" class="vacancy-form__input" required>
                 <span class="vacancy-form__span">error</span>
@@ -683,7 +703,8 @@
             <div class="vacancy-form__box vacancy-form__box_cb">
               <input class="quizz-form__checkbox-hidden" type="checkbox">
               <div class="quizz-form__checkbox-visible"></div>
-              <p class="vacancy-form__input-title vacancy-form__input-title_cb">Я даю согласие АНО ДПО "ШАД" ООО "ЯНДЕКС" на обработку указанных данных для целей рассмотрения анкеты и обратной связи по ней.</p>
+              <p class="vacancy-form__input-title vacancy-form__input-title_cb">Я даю согласие АНО ДПО "ШАД" ООО
+                "ЯНДЕКС" на обработку указанных данных для целей рассмотрения анкеты и обратной связи по ней.</p>
 
             </div>
 
