--- a/src/index.html
+++ b/src/index.html
@@ -108,11 +108,11 @@
         </section>
 
         <section class="teaching main-width-block" id="teaching">
-          <h2 class="section-title teaching__title">Чему мы учим?</h2>
+          <h2 class="section-title teaching__title">Чему мы учим</h2>
           <div class="teaching__box">
             <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/programming/"
               alt="Каталог курсов яндекс практикума">
-              <div class="teaching__course-box">С++</div>
+              <div class="teaching__course-box">Go</div>
               <div class="teaching__course teaching__course_c">
                 <h5 class="teaching__course-title">Программирование</h5>
                 <p class="teaching__course-subtitle">Тестирование, фронтенд, бэкенд, DevOps и алгоритмы</p>
