стилизовал секцию под мобилку

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
         </section>
         <section class="slides" id="slides">
           <div class="main-width-block">
-            <h2 class="section-title">Что говорят наши сотрудники</h2>
+            <h2 class="section-title slides__section-title">Что говорят наши&nbsp;сотрудники</h2>
           </div>
           <div class="slider">
             <button type="button" class="slider__control slider__control_type_prev"></button>
