--- a/src/index.html
+++ b/src/index.html
@@ -354,18 +354,20 @@
                 <label for="type2" class="vacancy__filter-option">Для ревьюеров</label>
               </fieldset>
             </div>
-            <fieldset class="vacancy__filter-items">
-              <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy1" class="vacancy__filter-item">Программирование</label>
-              <input name="area" value="analytics" id="vacancy2" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy2" class="vacancy__filter-item">Аналитика</label>
-              <input name="area" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy3" class="vacancy__filter-item">Дизайн</label>
-              <input name="area" value="marketing" id="vacancy4" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy4" class="vacancy__filter-item">Маркетинг</label>
-              <input name="area" value="management" id="vacancy5" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy5" class="vacancy__filter-item">Менеджмент</label>
-            </fieldset>
+            <div class="vacancy__filter-items-wrapper">
+              <fieldset class="vacancy__filter-items">
+                <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
+                <label for="vacancy1" class="vacancy__filter-item">Программирование</label>
+                <input name="area" value="analytics" id="vacancy2" class="vacancy__filter-radio" type="radio">
+                <label for="vacancy2" class="vacancy__filter-item">Аналитика</label>
+                <input name="area" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
+                <label for="vacancy3" class="vacancy__filter-item">Дизайн</label>
+                <input name="area" value="marketing" id="vacancy4" class="vacancy__filter-radio" type="radio">
+                <label for="vacancy4" class="vacancy__filter-item">Маркетинг</label>
+                <input name="area" value="management" id="vacancy5" class="vacancy__filter-radio" type="radio">
+                <label for="vacancy5" class="vacancy__filter-item">Менеджмент</label>
+              </fieldset>
+            </div>
           </form>
           <div class="vacancy__no-results">
             <p class="vacancy__no-results-text">Таких вакансий пока нет &#128522;</p>
@@ -390,7 +392,7 @@
               <h3 class="vacancy__banner-title">Не нашёл подходящее предложение?</h3>
               <p class="vacancy__banner-subtitle">Оставь контакты и мы подберём тебе роль в нашей коменде</p>
             </div>
-            <button class="vacancy__banner-button" type="button">Оставить отклик</button>
+            <button class="vacancy__banner-button" type="button">Оставить контакты</button>
           </div>
         </section>
         <section class="questions main-width-block" id="questions">
