--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                 Ищем наставников и ревьюеров для программирования, анализа
                 данных, менеджмента, маркетинга или дизайна
               </p>
-              <button class="section1__btn btn">
+              <button class="section1__btn btn" onclick="document.location='./index.html#benefits'">
                 Почему Яндекс Практикум?
               </button>
             </div>
@@ -106,7 +106,7 @@
                 </p>
               </li>
             </ul>
-            <button class="what-give__btn">Посмотреть вакансии</button>
+            <button class="what-give__btn" onclick="document.location='./index.html#vacancy'">Посмотреть вакансии</button>
           </div>
         </section>
 
