--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,7 @@
           <div class="slider">
             <button type="button" class="slider__control slider__control_type_prev"></button>
             <div class="slider__wrapper main-width-block">
+              <div class="slides__container">
               <ul class="slider__inner">
 
                 <li class="slider__item">
@@ -264,13 +265,14 @@
                 </li>
 
               </ul>
+              </div>
             </div>
             <button type="button" class="slider__control slider__control_type_next"></button>
           </div>
           <div class="slides__hearts"></div>
         </section>
         <section class="expectations main-width-block">
-          <h2 class="section-title">Что Яндекс Практикум ждёт от тебя</h2>
+          <h2 class="section-title">Что Яндекс Практикум ждёт&nbsp;от тебя</h2>
           <article class="expectations__card expectations__card_type_mentor">
             <div class="expectations__card-content-wrapper">
               <h3 class="expectations__card-title">Как от наставника:</h3>
