добавил ссылку на тг какнал в футер

--- a/src/index.html
+++ b/src/index.html
@@ -478,7 +478,7 @@
             <p class="footer__contacts-phone-caption">Звонок по России бесплатный</p>
             <div class="footer__contacts-social">
               <a href="https://vk.com/yandex.practicum" class="footer__social-icon footer__social-icon_type_vk"></a>
-              <a href="#" class="footer__social-icon footer__social-icon_type_tg"></a>
+              <a href="https://t.me/yndx_practicum" class="footer__social-icon footer__social-icon_type_tg"></a>
               <a href="https://thecode.media/" class="footer__social-link">Журнал</a>
             </div>
           </div>
