fix: popup contacts

--- a/src/index.html
+++ b/src/index.html
@@ -621,7 +621,7 @@
     </div>
 
     <div class="popup popup_type_contacts">
-      <div class="popup__inner popup__inner-contacts">
+      <div class="popup__inner popup__inner_type_contacts">
         <button class="popup__close-btn" type="button"></button>
         <form class="vacancy-form" name="popup__form" id="popup__form_edit">
           <h2 class="vacancy-form__title">Не нашли себя в открытых предложениях?
@@ -631,7 +631,7 @@
               <p class="vacancy-form__input-title">ФИО</p>
               <div class="vacancy-form__input-box">
                 <input type="text" class="vacancy-form__input" required>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
               </div>
             </div>
 
@@ -639,7 +639,7 @@
               <p class="vacancy-form__input-title">Почта</p>
               <div class="vacancy-form__input-box">
                 <input type="email" class="vacancy-form__input" required>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
               </div>
             </div>
 
@@ -647,12 +647,12 @@
               <p class="vacancy-form__input-title">Telegram или телефон</p>
               <div class="vacancy-form__input-box">
                 <input type="text" class="vacancy-form__input" required>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
               </div>
             </div>
 
             <div class="vacancy-form__box">
-              <p class="vacancy-form__input-title">Telegram или телефон</p>
+              <p class="vacancy-form__input-title">Какое направление вам ближе?</p>
               <div class="vacancy-form__input-box ">
                 <div class="vacancy-form__radio-box">
                   <div>
@@ -666,7 +666,7 @@
                     <label class="vacancy-form__label-radio" for="reviewer">Ревьюер</label>
                   </div>
                 </div>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
               </div>
             </div>
 
@@ -677,11 +677,11 @@
                   <option selected disabled></option>
                   <option value="программирование">программирование</option>
                   <option value="дизайн">дизайн</option>
-                  <option value="макетиг">макетиг</option>
+                  <option value="маркетиг">макетиг</option>
                   <option value="англ. яз">англ. яз</option>
                   <option value="менеджмент">менеджмент</option>
                 </select>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
               </div>
             </div>
 
@@ -689,17 +689,17 @@
               <p class="vacancy-form__input-title vacancy-form__input-title_ta">Перечислите набор технологий, которыми
                 вы владеете и уровень владения каждой</p>
               <textarea class="vacancy-form__textarea" required></textarea>
-              <span class="vacancy-form__span">error</span>
+              <span class="vacancy-form__span"></span>
 
             </div>
 
 
             <div class="vacancy-form__box">
-              <p class="vacancy-form__input-title">Ссылка на резюме (пожалуйста, проверте, что вы открыли доступ к
+              <p class="vacancy-form__input-title">Ссылка на резюме (пожалуйста, проверьте, что вы открыли доступ к
                 докумену )</p>
               <div class="vacancy-form__input-box">
                 <input type="text" class="vacancy-form__input" required>
-                <span class="vacancy-form__span">error</span>
+                <span class="vacancy-form__span"></span>
 
               </div>
             </div>
