fix:section paddings

--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
           <div class="slides__hearts"></div>
         </section>
         <section class="expectations main-width-block">
-          <h2 class="section-title">Что Яндекс Практикум ждёт&nbsp;от тебя</h2>
+          <h2 class="section-title expectations__title">Что Яндекс Практикум ждёт&nbsp;от тебя</h2>
           <article class="expectations__card expectations__card_type_mentor">
             <div class="expectations__card-content-wrapper">
               <h3 class="expectations__card-title">Как от наставника:</h3>
